--- a/index.html
+++ b/index.html
@@ -28,39 +28,39 @@
                 <div class="card__tittle">
                     <h2>Card One</h2>
                 </div>
-                <div class="card__paragraph"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus euismod nulla massa, id imperdiet.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus euismod nulla massa, id imperdiet.</p></div>
+                <div class="card__paragraph"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus euismod nulla massa, id imperdiet.</p></div>
             </div>
             <div class="first__card">
                 <div class="card__tittle">
                     <h2>Card Two</h2>
                 </div>
-                <div class="card__paragraph"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus euismod nulla massa, id imperdiet.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus euismod nulla massa, id imperdiet.</p></div>
+                <div class="card__paragraph"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus euismod nulla massa, id imperdiet.</p></div>
             </div>
             <div class="first__card">
                 <div class="card__tittle">
                     <h2>Card Three</h2>
                 </div>
-                <div class="card__paragraph"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus euismod nulla massa, id imperdiet.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus euismod nulla massa, id imperdiet.</p></div>
+                <div class="card__paragraph"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus euismod nulla massa, id imperdiet.</p></div>
             </div>
             <div class="first__card">
                 <div class="card__tittle">
                     <h2>Card Four</h2>
                 </div>
-                <div class="card__paragraph"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus euismod nulla massa, id imperdiet.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus euismod nulla massa, id imperdiet.</p></div>
+                <div class="card__paragraph"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus euismod nulla massa, id imperdiet.</p></div>
             </div>
             <div class="first__card">
                 <div class="card__tittle">
                     <h2>Card Five</h2>
                 </div>
-                <div class="card__paragraph"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus euismod nulla massa, id imperdiet.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus euismod nulla massa, id imperdiet.</p></div>
+                <div class="card__paragraph"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus euismod nulla massa, id imperdiet.</p></div>
             </div>
            </div>           
         </div>
-    </main>
-    <footer>
-        <div class="footer__paragraph">
-            <p>Have you discovered all of the other excellent content on this website?</p>
+        <div class="footer">
+            <div class="footer__paragraph">
+                <p>Have you discovered all of the other excellent content on this website?</p>
+            </div>
         </div>
-    </footer>
+    </main>
 </body>
 </html>
